2005-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/GenericFilter.py: Change filter rule names to make them consistent.
	* src/gramps_main.py: Change filter names to make them consistent.

	* src/Date.py: Import gettext.
	* src/DateDisplay.py: Import gettext.
	* src/GenericFilter.py: Support existing custom_filters.xml files
	by adding an old2new mapping for names.

	* src/AddSpouse.py (select_spouse_clicked): Display warning and
	provide a way to override when trying to add child/parent as a spouse.

2005-05-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py (decode): Decode characters and named
	entities. Because gramps is not web browser based we can simply use
	unicode.
	
2005-05-16  Don Allingham  <don@gramps-project.org>
	* src/PlaceView.py: select correct column for sorting
	* src/SourceView.py: select correct column for sorting
	* src/WriteGedcom.py: used 'replace' mode on iso-8859-1 string
	encoding conversion

2005-05-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ReadGedcom.py (parse_trailer): Catch EOF to warn about premature
	EOF only once; Always close file; (parse_record): Properly catch
	premature EOF instead of unknown level 0 records; Support single line
	SOUR records; (parse_address): Support PHON and NOTE, ignore _NAME.
	
2005-05-16  Alex Roitman  <shura@gramps-project.org>
	* src/ansel_utf8.py: Convert to Unix end-of-line.

	* src/plugins/StatisticsChart.py: Minor stylistic corrections.
	* src/GenericFilter.py: Minor stylistic corrections.

	* src/TarFile.py: Indent with spaces, remove string module.
	* src/RelImage.py: Remove unused string module.
	* src/SubstKeywords.py: Remove string module.

2005-05-16  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: fix reordering of children in family view

2005-05-15  Don Allingham  <don@gramps-project.org>
	* src/ChooseParents.py: redraw window properly after person add
	* src/DisplayModels.py: provide sorting support