@@ -135,7 +135,7 @@ class GrampsInMemDB(GrampsDbBase):
         return vals
 
     def remove_person(self,handle,transaction):
-        if self.readonly:
+        if self.readonly or not handle or str(handle) not in self.person_map:
             return
         person = self.get_person_from_handle(handle)
         self.genderStats.uncount_person (person)
@@ -147,7 +147,7 @@ class GrampsInMemDB(GrampsDbBase):
         del self.person_map[handle]
 
     def remove_source(self,handle,transaction):
-        if self.readonly:
+        if self.readonly or not handle or str(handle) not in self.source_map:
             return
         source = self.get_source_from_handle(handle)
         if transaction != None:
@@ -158,7 +158,7 @@ class GrampsInMemDB(GrampsDbBase):
         del self.source_map[str(handle)]
 
     def remove_place(self,handle,transaction):
-        if self.readonly:
+        if self.readonly or not handle or str(handle) not in self.place_map:
             return
         place = self.get_place_from_handle(handle)
         if transaction != None:
@@ -169,7 +169,7 @@ class GrampsInMemDB(GrampsDbBase):
         del self.place_map[str(handle)]
 
     def remove_object(self,handle,transaction):
-        if self.readonly:
+        if self.readonly or not handle or str(handle) not in self.media_map:
             return
         obj = self.get_object_from_handle(handle)
         if transaction != None:
@@ -179,7 +179,7 @@ class GrampsInMemDB(GrampsDbBase):
         del self.media_map[str(handle)]
 
     def remove_family(self,handle,transaction):
-        if self.readonly:
+        if self.readonly or not handle or str(handle) not in self.family_map:
             return
         family = self.get_family_from_handle(handle)
         if transaction != None:
@@ -190,7 +190,7 @@ class GrampsInMemDB(GrampsDbBase):
         del self.family_map[str(handle)]
 
     def remove_event(self,handle,transaction):
-        if self.readonly:
+        if self.readonly or not handle or str(handle) not in self.event_map:
             return
         if transaction != None:
             old_data = self.event_map.get(str(handle))
@@ -198,35 +198,35 @@ class GrampsInMemDB(GrampsDbBase):
         del self.event_map[str(handle)]
 
     def commit_person(self,person,transaction,change_time=None):
-        if self.readonly or not person.get_handle():
+        if self.readonly or not person or not person.get_handle():
             return
         gid = person.get_gramps_id()
         self.id_trans[gid] = person.get_handle()
         GrampsDbBase.commit_person(self,person,transaction,change_time)
 
     def commit_place(self,place,transaction,change_time=None):
-        if self.readonly or not place.get_handle():
+        if self.readonly or not place or not place.get_handle():
             return
         gid = place.get_gramps_id()
         self.pid_trans[gid] = place.get_handle()
         GrampsDbBase.commit_place(self,place,transaction,change_time)
 
     def commit_family(self,family,transaction,change_time=None):
-        if self.readonly or not family.get_handle():
+        if self.readonly or not family or not family.get_handle():
             return
         gid = family.get_gramps_id()
         self.fid_trans[gid] = family.get_handle()
         GrampsDbBase.commit_family(self,family,transaction,change_time)
 
     def commit_media_object(self,obj,transaction,change_time=None):
-        if self.readonly or not obj.get_handle():
+        if self.readonly or not obj or not obj.get_handle():
             return
         gid = obj.get_gramps_id()
         self.oid_trans[gid] = obj.get_handle()
         GrampsDbBase.commit_media_object(self,obj,transaction,change_time)
 
     def commit_source(self,source,transaction,change_time=None):
-        if self.readonly or not source.get_handle():
+        if self.readonly or not source or not source.get_handle():
             return
         gid = source.get_gramps_id()
         self.sid_trans[gid] = source.get_handle()
