@@ -1,3 +1,8 @@
+2005-05-18  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/GrampsBSDDB.py, src/GrampsDbBase.py, src/GrampsInMemDB.py,
+	  src/RelLib.py: Catch invalid arguments instead of crashing.
+	TODO: raise TypeError or HandleError instead of simply returning?
+
 2005-05-17  Alex Roitman  <shura@gramps-project.org>
 	* src/GenericFilter.py: Change filter rule names to make them consistent.
 	* src/gramps_main.py: Change filter names to make them consistent.
